fixed cube urls overflow on mobile, triage rev wrap

--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -74,6 +74,9 @@
   .video-lge {
     min-width: 200px;
   }
+  .long-url {
+    font-size: 76%;
+  }
 }
 
 @media only screen and (max-width: 376px) {
